--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     ports:
       - "80:80"
     links:
-      - coux_backend
+      - grecom_backend
     depends_on:
-      - coux_backend
+      - grecom_backend
   grecom_backend:
     container_name: coux_backend
     restart: always
