Update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - grecom_backend
   grecom_backend:
-    container_name: coux_backend
+    container_name: grecom_backend
     restart: always
     build:
       context: backend
