--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   grecom_frontend:
-    container_name: coux_frontend
+    container_name: grecom_frontend
     restart: always
     build:
       context: frontend
