--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "antd": "^4.16.10",
+    "antd": "^4.16.11",
     "axios": "^0.21.1",
     "craco-less": "^1.18.0",
     "d3": "^7.0.0",
@@ -26,6 +26,7 @@
     "react-wordcloud": "^1.2.7",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
