--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     restart: always
     build:
     build:
-      context: backend
+      context: groupBackend
       dockerfile: Dockerfile
     volumes:
       - ./backend/assets:/app/assets
