--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^6.0.1",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
